# WnnEngine

app/: build.gradle
app/src/androidTest/java/io/github/kachaya/wnnengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libwnnDictionary/: CMakeLists.txt
app/src/main/cpp/libwnnEngDic/: CMakeLists.txt
app/src/main/cpp/libwnnJpnDic/: CMakeLists.txt
app/src/main/java/io/github/kachaya/wnnengine/: MainActivity.java
app/src/main/java/jp/co/omronsoft/openwnn/EN/: OpenWnnEngineEN.java
app/src/main/java/jp/co/omronsoft/openwnn/JAJP/: OpenWnnEngineJAJP.java
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/kachaya/wnnengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
